<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="close" translatable="false">Close</string>
    <string name="webview_default_title">DailyBook</string>
    <string name="which_language_do_you_prefer">Which language do you prefer?</string>
    <string name="english" translatable="false">English</string>
    <string name="hindi" translatable="false">हिन्दी</string>
    <string name="marathi" translatable="false">मराठी</string>
    <string name="kannada" translatable="false">ಕನ್ನಡ</string>
    <string name="tamil" translatable="false">தமிழ்</string>
    <string name="telugu" translatable="false">తెలుగు</string>
    <string name="bengali" translatable="false">বাংলা</string>
    <string name="share_content">If you are tired of marking attendance on paper, don\'t worry. Download the DailyBook app from the Play Store link and start marking attendance faster.\n\n        Download now on Google Play: https://play.google.com/store/apps/details?id=co.in.dailybook</string>
    
    <!-- PDF Generator Strings -->
    <string name="name">Name</string>
    <string name="phone_number_label">Phone number:</string>
    <string name="attendance_summary">Attendance Summary</string>
    <string name="present_label">Present</string>
    <string name="absent_label">Absent</string>
    <string name="overtime_label">Overtime</string>
    <string name="half_day_label">Half day</string>
    <string name="p_plus_half_label">P + 1/2</string>
    <string name="p_plus_p_label">P+P</string>
    <string name="payment_summary">Payment summary</string>
    <string name="advance_amount_label">Advance amount</string>
    <string name="total_earnings_label">Total Earnings</string>
    <string name="report_generated_by_dailybook">Report generated by DailyBook</string>
    <string name="download_app_for_free_newline">Download app for FREE\nGet it on Google Play</string>
    <string name="p" translatable="false">P</string>
    <string name="a" translatable="false">A</string>
    <string name="ot" translatable="false">OT</string>
    <string name="_1_2" translatable="false">1/2</string>
    <string name="ad" translatable="false">Ad</string>
    <string name="refer_friend_whatsapp_message">I use DailyBook to manage daily work easily. Now 5 lakh+ people are using it! Try it here 👉 https://play.google.com/store/apps/details?id=co.in.dailybook</string>
</resources>
